[gd_scene load_steps=3 format=2]

[ext_resource path="res://views/EditView.gd" type="Script" id=1]
[ext_resource path="res://views/instances/Card.tscn" type="PackedScene" id=3]

[node name="EditView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="MarginContainer" parent="HBoxContainer"]
margin_right = 320.0
margin_bottom = 704.0
rect_min_size = Vector2( 320, 0 )
size_flags_vertical = 3

[node name="CatViewBtn" type="Button" parent="HBoxContainer/Left"]
margin_top = 192.0
margin_right = 320.0
margin_bottom = 512.0
rect_min_size = Vector2( 320, 320 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Center" type="MarginContainer" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 760.0
margin_bottom = 704.0
rect_min_size = Vector2( 424, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Card" parent="HBoxContainer/Center" instance=ExtResource( 3 )]
margin_right = 424.0
margin_bottom = 704.0
size_flags_vertical = 3

[node name="Right" type="MarginContainer" parent="HBoxContainer"]
margin_left = 776.0
margin_right = 1264.0
margin_bottom = 704.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right"]
margin_right = 488.0
margin_bottom = 704.0
custom_constants/separation = 16

[node name="DeleteBtn" type="Button" parent="HBoxContainer/Right/VBoxContainer"]
margin_right = 488.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveBtn" type="Button" parent="HBoxContainer/Right/VBoxContainer"]
margin_top = 240.0
margin_right = 488.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CameraBtn" type="Button" parent="HBoxContainer/Right/VBoxContainer"]
margin_top = 480.0
margin_right = 488.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Save" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -44.0
margin_right = 320.0
margin_bottom = 44.0

[node name="Del" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -42.0
margin_right = 320.0
margin_bottom = 46.0

[node name="Ads" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -42.0
margin_right = 320.0
margin_bottom = 46.0
